tests/query_errors/node_reserved_name_script/error.txt
Error: 
    3 |   event
    4 | end;
    5 | create script out;
      | ^^^^^^^^^^^^^^^^^ Name `out` is already in use for another node, please use another name.
    6 | 
    7 | select event from in into out;